tests/files/fail/ImportJavaAll.krna
/* Fail SyntaxError */

import * java::from.obj